added logo color choose optoin to header

--- a/snippets/header-content.liquid
+++ b/snippets/header-content.liquid
@@ -82,7 +82,7 @@
     assign logo_width = header_settings.logo_width | default: 200
     assign logo_max_height = header_settings.logo_max_height | default: 60
     assign logo_font_size = header_settings.logo_font_size | default: 24
-    assign logo_color = settings.logo_color | default: '#8B6F47'
+    assign logo_color = header_settings.logo_color | default: '#8B6F47'
     assign menu = header_settings.menu | default: 'main-menu'
     assign menu_alignment = header_settings.menu_alignment | default: 'right'
     assign menu_font_size = settings.menu_font_size | default: 16
