--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -66,6 +66,12 @@
       "default": 24
     },
     {
+      "type": "color",
+      "id": "logo_color",
+      "label": "Logo Color",
+      "default": "#000000"
+    },
+    {
       "type": "header",
       "content": "Book Now Button"
     },
