--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -15,6 +15,7 @@
   {% comment %} theme-check-enable RemoteAsset {% endcomment %}
   <!-- Theme CSS -->
   {{ 'theme.css' | asset_url | stylesheet_tag }}
+  {{ 'custom-collection.css' | asset_url | stylesheet_tag }}
   
   <!-- Typography CSS - Must load last to override everything -->
   <style>
