--- a/assets/custom-collection.css
+++ b/assets/custom-collection.css
@@ -8,20 +8,20 @@
   border-top-right-radius: var(--image-border-radius);
 }
 
-.card-title {
-  font-size: var(--title-font-size);
-  font-weight: var(--title-font-weight);
-  color: var(--title-color);
+.card .card-title {
+  font-size: var(--title-font-size) !important;
+  font-weight: var(--title-font-weight) !important;
+  color: var(--title-color) !important;
 }
 
-.card-text {
-  font-size: var(--price-font-size);
-  font-weight: var(--price-font-weight);
-  color: var(--price-color);
+.card .card-text {
+  font-size: var(--price-font-size) !important;
+  font-weight: var(--price-font-weight) !important;
+  color: var(--price-color) !important;
 }
 
-.text-muted {
-  font-size: var(--vendor-font-size);
-  font-weight: var(--vendor-font-weight);
-  color: var(--vendor-color);
+.card .text-muted {
+  font-size: var(--vendor-font-size) !important;
+  font-weight: var(--vendor-font-weight) !important;
+  color: var(--vendor-color) !important;
 }
