Fixed main collection cards height and content

--- a/assets/custom-collection.css
+++ b/assets/custom-collection.css
@@ -14,6 +14,10 @@
   color: var(--title-color) !important;
 }
 
+.card-title-grow {
+  flex-grow: 1;
+}
+
 .card .card-text {
   font-size: var(--price-font-size) !important;
   font-weight: var(--price-font-weight) !important;
