--- a/sections/main-collection.liquid
+++ b/sections/main-collection.liquid
@@ -24,8 +24,8 @@
                 {% else %}
                   {{ 'product-1' | placeholder_svg_tag: 'card-img-top' }}
                 {% endif %}
-                <div class="card-body">
-                  <h5 class="card-title">
+                <div class="card-body d-flex flex-column">
+                  <h5 class="card-title card-title-grow">
                     {{ product.title }}
                   </h5>
                   <p class="card-text">
