--- a/sections/main-collection.liquid
+++ b/sections/main-collection.liquid
@@ -16,7 +16,7 @@
         {% for product in collection.products %}
           <div class="col">
             <div class="card h-100 {% if section.settings.card_shadow %}shadow-sm{% endif %}">
-              <a href="{{ product.url | within: collection }}" class="text-decoration-none text-dark">
+              <a href="{{ product.url | within: collection }}" class="text-decoration-none text-dark d-flex flex-column h-100">
                 {% if product.featured_image %}
                   <img src="{{ product.featured_image | img_url: 'large' }}"
                        class="card-img-top"
@@ -24,7 +24,7 @@
                 {% else %}
                   {{ 'product-1' | placeholder_svg_tag: 'card-img-top' }}
                 {% endif %}
-                <div class="card-body d-flex flex-column">
+                <div class="card-body">
                   <h5 class="card-title card-title-grow">
                     {{ product.title }}
                   </h5>
